[gd_scene load_steps=9 format=3 uid="uid://fwl10inn7emn"]

[ext_resource type="Texture2D" uid="uid://c7bsro6vksbo6" path="res://graphics/player/player.png" id="1_4y4jn"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_ewe60"]
[ext_resource type="Texture2D" uid="uid://dbv65ao3ub0v1" path="res://graphics/decals/white.png" id="3_txhp2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dr8gf"]
radius = 60.075

[sub_resource type="Gradient" id="Gradient_4xgkr"]
offsets = PackedFloat32Array(0, 0.99359)
colors = PackedColorArray(0.133333, 1, 1, 0.662745, 0.541176, 1, 1, 0.384314)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_m741y"]
gradient = SubResource("Gradient_4xgkr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4476w"]
particle_flag_disable_z = true
spread = 15.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.3
scale_max = 0.8
color = Color(0.133333, 1, 1, 0.415686)
color_ramp = SubResource("GradientTexture1D_m741y")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_diu5v"]
polygon = PackedVector2Array(123, 2, 124, 4, 122, 7, 123, 8, 127, 5, 130, 7, 132, 10, 132, 25, 130, 30, 127, 33, 124, 32, 122, 31, 121, 31, 122, 35, 121, 36, 112, 36, 110, 35, 107, 34, 100, 43, 96, 43, 95, 50, 93, 52, 61, 53, 58, 50, 57, 46, 58, 43, 61, 41, 43, 41, 42, 40, 35, 44, 29, 46, 23, 47, 13, 53, 1, 58, -5, 59, -7, 60, -20, 60, -30, 57, -37, 51, -38, 44, -42, 39, -44, 33, -49, 30, -52, 24, -54, 20, -51, 18, -52, 16, -55, 14, -58, 10, -60, 4, -60, -8, -60, -23, -54, -31, -54, -36, -51, -40, -44, -45, -41, -47, -36, -48, -31, -47, -28, -48, -29, -51, -22, -55, -17, -57, -13, -57, -12, -56, -1, -60, 10, -60, 11, -59, 19, -62, 22, -62, 26, -60, 30, -56, 35, -48, 41, -43, 43, -41, 42, -38, 48, -29, 54, -29, 59, -27, 75, -10, 78, -10, 80, -11, 85, -12, 90, -10, 96, -5, 107, -4, 109, -2, 109, 1)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_ewe60")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(36, 0)
rotation = 1.5708
texture = ExtResource("1_4y4jn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dr8gf")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(131, 19)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(128, 31)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(129, 9)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(129, 19)
emitting = false
process_material = SubResource("ParticleProcessMaterial_4476w")
texture = ExtResource("3_txhp2")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_diu5v")

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
